# biodata-query

./: CITATION.cff  PLAN.md  README.md  pyproject.toml
.github/workflows/: tag_and_publish.yml  test_and_lint.yml
docs/source/: conf.py
scripts/: integration_batching.py  integration_llm.py  integration_query.py  llm_server.py  panel_demo.py
src/biodata_query/: query.py
src/biodata_query/llm/: __init__.py  agent.py  endpoint.py  prompt.py
src/biodata_query/panel/: __init__.py  builder.py  results.py
tests/: test_llm.py  test_panel.py  test_query.py
