[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biodata-query"
version = "0.0.0"
description = "Query builder for AIND metadata with cache-aware routing and LLM support"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"

dependencies = [
    "aind-data-schema>=2.6.0,<3",
    "zombie-squirrel>=0.16.4,<1",
    "aind-data-access-api[docdb]>=1.9.4,<2",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]
panel = [
    "panel>=1.8.10,<2",
    "panel-material-ui",
]
llm = [
    "boto3>=1.35,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biodata_query"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src/biodata_query"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
